ifdev/idea-plugin/gen/ru/cpb9/ifdev/parser/IfDevParser.java
// This is a generated file. Not intended for manual editing.
package ru.cpb9.ifdev.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static ru.cpb9.ifdev.parser.psi.IfDevTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class IfDevParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    if (t == ALIAS_DECL) {
      r = alias_decl(b, 0);
    }
    else if (t == ALL_PARAMETERS) {
      r = all_parameters(b, 0);
    }
    else if (t == ARRAY_TYPE_APPLICATION) {
      r = array_type_application(b, 0);
    }
    else if (t == COMMAND_ARG) {
      r = command_arg(b, 0);
    }
    else if (t == COMMAND_ARGS) {
      r = command_args(b, 0);
    }
    else if (t == COMMAND_DECL) {
      r = command_decl(b, 0);
    }
    else if (t == COMPONENT_BASE_TYPE_DECL) {
      r = component_base_type_decl(b, 0);
    }
    else if (t == COMPONENT_DECL) {
      r = component_decl(b, 0);
    }
    else if (t == DEEP_ALL_PARAMETERS) {
      r = deep_all_parameters(b, 0);
    }
    else if (t == DYNAMIC_STATUS_MESSAGE) {
      r = dynamic_status_message(b, 0);
    }
    else if (t == ELEMENT_ID) {
      r = element_id(b, 0);
    }
    else if (t == ELEMENT_NAME_RULE) {
      r = element_name_rule(b, 0);
    }
    else if (t == ENUM_TYPE_DECL) {
      r = enum_type_decl(b, 0);
    }
    else if (t == ENUM_TYPE_VALUE) {
      r = enum_type_value(b, 0);
    }
    else if (t == ENUM_TYPE_VALUES) {
      r = enum_type_values(b, 0);
    }
    else if (t == EVENT_MESSAGE) {
      r = event_message(b, 0);
    }
    else if (t == FLOAT_LITERAL) {
      r = float_literal(b, 0);
    }
    else if (t == INFO_STRING) {
      r = info_string(b, 0);
    }
    else if (t == LENGTH_FROM) {
      r = length_from(b, 0);
    }
    else if (t == LENGTH_TO) {
      r = length_to(b, 0);
    }
    else if (t == LITERAL) {
      r = literal(b, 0);
    }
    else if (t == MESSAGE_DECL) {
      r = message_decl(b, 0);
    }
    else if (t == MESSAGE_PARAMETERS_DECL) {
      r = message_parameters_decl(b, 0);
    }
    else if (t == NAMESPACE_DECL) {
      r = namespace_decl(b, 0);
    }
    else if (t == PARAMETER_DECL) {
      r = parameter_decl(b, 0);
    }
    else if (t == PARAMETER_ELEMENT) {
      r = parameter_element(b, 0);
    }
    else if (t == PRIMITIVE_TYPE_APPLICATION) {
      r = primitive_type_application(b, 0);
    }
    else if (t == PRIMITIVE_TYPE_KIND) {
      r = primitive_type_kind(b, 0);
    }
    else if (t == STATUS_MESSAGE) {
      r = status_message(b, 0);
    }
    else if (t == STRING_VALUE) {
      r = string_value(b, 0);
    }
    else if (t == STRUCT_TYPE_DECL) {
      r = struct_type_decl(b, 0);
    }
    else if (t == SUBCOMPONENT_DECL) {
      r = subcomponent_decl(b, 0);
    }
    else if (t == TYPE_APPLICATION) {
      r = type_application(b, 0);
    }
    else if (t == TYPE_DECL) {
      r = type_decl(b, 0);
    }
    else if (t == TYPE_DECL_BODY) {
      r = type_decl_body(b, 0);
    }
    else if (t == TYPE_UNIT_APPLICATION) {
      r = type_unit_application(b, 0);
    }
    else if (t == UNIT) {
      r = unit(b, 0);
    }
    else if (t == UNIT_DECL) {
      r = unit_decl(b, 0);
    }
    else {
      r = parse_root_(t, b, 0);
    }
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return ifDevFile(b, l + 1);
  }

  /* ********************************************************** */
  // ALIAS element_id type_application info_string?
  public static boolean alias_decl(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "alias_decl")) return false;
    if (!nextTokenIs(b, ALIAS)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ALIAS);
    r = r && element_id(b, l + 1);
    r = r && type_application(b, l + 1);
    r = r && alias_decl_3(b, l + 1);
    exit_section_(b, m, ALIAS_DECL, r);
    return r;
  }

  // info_string?
  private static boolean alias_decl_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "alias_decl_3")) return false;
    info_string(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // STAR
  public static boolean all_parameters(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "all_parameters")) return false;
    if (!nextTokenIs(b, STAR)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, STAR);
    exit_section_(b, m, ALL_PARAMETERS, r);
    return r;
  }

  /* ********************************************************** */
  // LEFT_BRACKET type_application COMMA length_from (DOTS length_to)? RIGHT_BRACKET
  public static boolean array_type_application(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_type_application")) return false;
    if (!nextTokenIs(b, LEFT_BRACKET)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LEFT_BRACKET);
    r = r && type_application(b, l + 1);
    r = r && consumeToken(b, COMMA);
    r = r && length_from(b, l + 1);
    r = r && array_type_application_4(b, l + 1);
    r = r && consumeToken(b, RIGHT_BRACKET);
    exit_section_(b, m, ARRAY_TYPE_APPLICATION, r);
    return r;
  }

  // (DOTS length_to)?
  private static boolean array_type_application_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_type_application_4")) return false;
    array_type_application_4_0(b, l + 1);
    return true;
  }

  // DOTS length_to
  private static boolean array_type_application_4_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_type_application_4_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, DOTS);
    r = r && length_to(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // type_unit_application element_name_rule info_string?
  public static boolean command_arg(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_arg")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<command arg>");
    r = type_unit_application(b, l + 1);
    r = r && element_name_rule(b, l + 1);
    r = r && command_arg_2(b, l + 1);
    exit_section_(b, l, m, COMMAND_ARG, r, false, null);
    return r;
  }

  // info_string?
  private static boolean command_arg_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_arg_2")) return false;
    info_string(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // command_arg (COMMA command_arg)* COMMA?
  public static boolean command_args(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_args")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<command args>");
    r = command_arg(b, l + 1);
    r = r && command_args_1(b, l + 1);
    r = r && command_args_2(b, l + 1);
    exit_section_(b, l, m, COMMAND_ARGS, r, false, null);
    return r;
  }

  // (COMMA command_arg)*
  private static boolean command_args_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_args_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!command_args_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "command_args_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // COMMA command_arg
  private static boolean command_args_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_args_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && command_arg(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // COMMA?
  private static boolean command_args_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_args_2")) return false;
    consumeToken(b, COMMA);
    return true;
  }

  /* ********************************************************** */
  // COMMAND element_name_rule COLON NON_NEGATIVE_NUMBER info_string? LEFT_PAREN command_args? RIGHT_PAREN
  public static boolean command_decl(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_decl")) return false;
    if (!nextTokenIs(b, COMMAND)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMAND);
    r = r && element_name_rule(b, l + 1);
    r = r && consumeTokens(b, 0, COLON, NON_NEGATIVE_NUMBER);
    r = r && command_decl_4(b, l + 1);
    r = r && consumeToken(b, LEFT_PAREN);
    r = r && command_decl_6(b, l + 1);
    r = r && consumeToken(b, RIGHT_PAREN);
    exit_section_(b, m, COMMAND_DECL, r);
    return r;
  }

  // info_string?
  private static boolean command_decl_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_decl_4")) return false;
    info_string(b, l + 1);
    return true;
  }

  // command_args?
  private static boolean command_decl_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_decl_6")) return false;
    command_args(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // type_decl_body
  public static boolean component_base_type_decl(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "component_base_type_decl")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<component base type decl>");
    r = type_decl_body(b, l + 1);
    exit_section_(b, l, m, COMPONENT_BASE_TYPE_DECL, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // COMPONENT element_name_rule (COLON subcomponent_decl (COMMA subcomponent_decl)*)? info_string?
  //     LEFT_BRACE component_base_type_decl? (command_decl|message_decl)* RIGHT_BRACE
  public static boolean component_decl(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "component_decl")) return false;
    if (!nextTokenIs(b, COMPONENT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMPONENT);
    r = r && element_name_rule(b, l + 1);
    r = r && component_decl_2(b, l + 1);
    r = r && component_decl_3(b, l + 1);
    r = r && consumeToken(b, LEFT_BRACE);
    r = r && component_decl_5(b, l + 1);
    r = r && component_decl_6(b, l + 1);
    r = r && consumeToken(b, RIGHT_BRACE);
    exit_section_(b, m, COMPONENT_DECL, r);
    return r;
  }

  // (COLON subcomponent_decl (COMMA subcomponent_decl)*)?
  private static boolean component_decl_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "component_decl_2")) return false;
    component_decl_2_0(b, l + 1);
    return true;
  }

  // COLON subcomponent_decl (COMMA subcomponent_decl)*
  private static boolean component_decl_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "component_decl_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COLON);
    r = r && subcomponent_decl(b, l + 1);
    r = r && component_decl_2_0_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (COMMA subcomponent_decl)*
  private static boolean component_decl_2_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "component_decl_2_0_2")) return false;
    int c = current_position_(b);
    while (true) {
      if (!component_decl_2_0_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "component_decl_2_0_2", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // COMMA subcomponent_decl
  private static boolean component_decl_2_0_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "component_decl_2_0_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && subcomponent_decl(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // info_string?
  private static boolean component_decl_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "component_decl_3")) return false;
    info_string(b, l + 1);
    return true;
  }

  // component_base_type_decl?
  private static boolean component_decl_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "component_decl_5")) return false;
    component_base_type_decl(b, l + 1);
    return true;
  }

  // (command_decl|message_decl)*
  private static boolean component_decl_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "component_decl_6")) return false;
    int c = current_position_(b);
    while (true) {
      if (!component_decl_6_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "component_decl_6", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // command_decl|message_decl
  private static boolean component_decl_6_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "component_decl_6_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = command_decl(b, l + 1);
    if (!r) r = message_decl(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // STAR DOT STAR
  public static boolean deep_all_parameters(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "deep_all_parameters")) return false;
    if (!nextTokenIs(b, STAR)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, STAR, DOT, STAR);
    exit_section_(b, m, DEEP_ALL_PARAMETERS, r);
    return r;
  }

  /* ********************************************************** */
  // DYNAMIC STATUS message_parameters_decl
  public static boolean dynamic_status_message(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dynamic_status_message")) return false;
    if (!nextTokenIs(b, DYNAMIC)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, DYNAMIC, STATUS);
    r = r && message_parameters_decl(b, l + 1);
    exit_section_(b, m, DYNAMIC_STATUS_MESSAGE, r);
    return r;
  }

  /* ********************************************************** */
  // element_name_rule (DOT element_name_rule)*
  public static boolean element_id(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "element_id")) return false;
    if (!nextTokenIs(b, "<element id>", ELEMENT_NAME_TOKEN, ESCAPED_NAME)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<element id>");
    r = element_name_rule(b, l + 1);
    r = r && element_id_1(b, l + 1);
    exit_section_(b, l, m, ELEMENT_ID, r, false, null);
    return r;
  }

  // (DOT element_name_rule)*
  private static boolean element_id_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "element_id_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!element_id_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "element_id_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // DOT element_name_rule
  private static boolean element_id_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "element_id_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, DOT);
    r = r && element_name_rule(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // ELEMENT_NAME_TOKEN | ESCAPED_NAME
  public static boolean element_name_rule(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "element_name_rule")) return false;
    if (!nextTokenIs(b, "<element name rule>", ELEMENT_NAME_TOKEN, ESCAPED_NAME)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<element name rule>");
    r = consumeToken(b, ELEMENT_NAME_TOKEN);
    if (!r) r = consumeToken(b, ESCAPED_NAME);
    exit_section_(b, l, m, ELEMENT_NAME_RULE, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // ENUM element_id info_string? LEFT_PAREN enum_type_values RIGHT_PAREN
  public static boolean enum_type_decl(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_type_decl")) return false;
    if (!nextTokenIs(b, ENUM)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ENUM);
    r = r && element_id(b, l + 1);
    r = r && enum_type_decl_2(b, l + 1);
    r = r && consumeToken(b, LEFT_PAREN);
    r = r && enum_type_values(b, l + 1);
    r = r && consumeToken(b, RIGHT_PAREN);
    exit_section_(b, m, ENUM_TYPE_DECL, r);
    return r;
  }

  // info_string?
  private static boolean enum_type_decl_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_type_decl_2")) return false;
    info_string(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // element_name_rule EQ_SIGN literal info_string?
  public static boolean enum_type_value(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_type_value")) return false;
    if (!nextTokenIs(b, "<enum type value>", ELEMENT_NAME_TOKEN, ESCAPED_NAME)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<enum type value>");
    r = element_name_rule(b, l + 1);
    r = r && consumeToken(b, EQ_SIGN);
    r = r && literal(b, l + 1);
    r = r && enum_type_value_3(b, l + 1);
    exit_section_(b, l, m, ENUM_TYPE_VALUE, r, false, null);
    return r;
  }

  // info_string?
  private static boolean enum_type_value_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_type_value_3")) return false;
    info_string(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // enum_type_value (COMMA enum_type_value)* COMMA?
  public static boolean enum_type_values(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_type_values")) return false;
    if (!nextTokenIs(b, "<enum type values>", ELEMENT_NAME_TOKEN, ESCAPED_NAME)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<enum type values>");
    r = enum_type_value(b, l + 1);
    r = r && enum_type_values_1(b, l + 1);
    r = r && enum_type_values_2(b, l + 1);
    exit_section_(b, l, m, ENUM_TYPE_VALUES, r, false, null);
    return r;
  }

  // (COMMA enum_type_value)*
  private static boolean enum_type_values_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_type_values_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!enum_type_values_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "enum_type_values_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // COMMA enum_type_value
  private static boolean enum_type_values_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_type_values_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && enum_type_value(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // COMMA?
  private static boolean enum_type_values_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_type_values_2")) return false;
    consumeToken(b, COMMA);
    return true;
  }

  /* ********************************************************** */
  // EVENT message_parameters_decl
  public static boolean event_message(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "event_message")) return false;
    if (!nextTokenIs(b, EVENT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, EVENT);
    r = r && message_parameters_decl(b, l + 1);
    exit_section_(b, m, EVENT_MESSAGE, r);
    return r;
  }

  /* ********************************************************** */
  // (PLUS | MINUS)? (NON_NEGATIVE_NUMBER DOT NON_NEGATIVE_NUMBER? | DOT NON_NEGATIVE_NUMBER) (("e" | "E") (PLUS | MINUS)? NON_NEGATIVE_NUMBER)?
  public static boolean float_literal(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "float_literal")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<float literal>");
    r = float_literal_0(b, l + 1);
    r = r && float_literal_1(b, l + 1);
    r = r && float_literal_2(b, l + 1);
    exit_section_(b, l, m, FLOAT_LITERAL, r, false, null);
    return r;
  }

  // (PLUS | MINUS)?
  private static boolean float_literal_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "float_literal_0")) return false;
    float_literal_0_0(b, l + 1);
    return true;
  }

  // PLUS | MINUS
  private static boolean float_literal_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "float_literal_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, PLUS);
    if (!r) r = consumeToken(b, MINUS);
    exit_section_(b, m, null, r);
    return r;
  }

  // NON_NEGATIVE_NUMBER DOT NON_NEGATIVE_NUMBER? | DOT NON_NEGATIVE_NUMBER
  private static boolean float_literal_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "float_literal_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = float_literal_1_0(b, l + 1);
    if (!r) r = parseTokens(b, 0, DOT, NON_NEGATIVE_NUMBER);
    exit_section_(b, m, null, r);
    return r;
  }

  // NON_NEGATIVE_NUMBER DOT NON_NEGATIVE_NUMBER?
  private static boolean float_literal_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "float_literal_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, NON_NEGATIVE_NUMBER, DOT);
    r = r && float_literal_1_0_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // NON_NEGATIVE_NUMBER?
  private static boolean float_literal_1_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "float_literal_1_0_2")) return false;
    consumeToken(b, NON_NEGATIVE_NUMBER);
    return true;
  }

  // (("e" | "E") (PLUS | MINUS)? NON_NEGATIVE_NUMBER)?
  private static boolean float_literal_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "float_literal_2")) return false;
    float_literal_2_0(b, l + 1);
    return true;
  }

  // ("e" | "E") (PLUS | MINUS)? NON_NEGATIVE_NUMBER
  private static boolean float_literal_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "float_literal_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = float_literal_2_0_0(b, l + 1);
    r = r && float_literal_2_0_1(b, l + 1);
    r = r && consumeToken(b, NON_NEGATIVE_NUMBER);
    exit_section_(b, m, null, r);
    return r;
  }

  // "e" | "E"
  private static boolean float_literal_2_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "float_literal_2_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "e");
    if (!r) r = consumeToken(b, "E");
    exit_section_(b, m, null, r);
    return r;
  }

  // (PLUS | MINUS)?
  private static boolean float_literal_2_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "float_literal_2_0_1")) return false;
    float_literal_2_0_1_0(b, l + 1);
    return true;
  }

  // PLUS | MINUS
  private static boolean float_literal_2_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "float_literal_2_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, PLUS);
    if (!r) r = consumeToken(b, MINUS);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // namespace_decl (component_decl | unit_decl | type_decl | alias_decl)*
  static boolean ifDevFile(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ifDevFile")) return false;
    if (!nextTokenIs(b, NAMESPACE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = namespace_decl(b, l + 1);
    r = r && ifDevFile_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (component_decl | unit_decl | type_decl | alias_decl)*
  private static boolean ifDevFile_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ifDevFile_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!ifDevFile_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "ifDevFile_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // component_decl | unit_decl | type_decl | alias_decl
  private static boolean ifDevFile_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ifDevFile_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = component_decl(b, l + 1);
    if (!r) r = unit_decl(b, l + 1);
    if (!r) r = type_decl(b, l + 1);
    if (!r) r = alias_decl(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }
